# TMR4160

./: .gitignore  CMakeLists.txt
include/: phidget22.h
include/glad/: glad.h
resources/: constants.txt  indices.txt  vertices.txt
resources/boat/: fragmentShader.glsl
resources/graph/: fragmentShader.glsl  vertexShader.glsl
resources/marker/: vertexShader.glsl
src/: boat.c  boat.h  clamp.h  fake_boat.c  fake_boat.h  file_utils.c  file_utils.h  glad.c  graph.c  graph.h  graphics.c  graphics.h  logger.c  logger.h  main.c  marker.c  phidget_utils.c  phidget_utils.h  pid.c  pid.h  shader_util.c  shader_util.h  ui.c  window_util.c
src/graphics/: graph.c  graphics.c  marker.c  marker.h  shader_util.c  ui.c  window_util.h
src/utils/: phidget_utils.c  phidget_utils.h
